[package]
name = "kerchief"
version = "0.1.0-alpha"
authors = ["rosensymmetri <o.berndal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
# serde = { version = "1.0", features = ["derive"]}
# serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
zip = "0.5"
walkdir = "2.3.1"
clap = "2.33.3"
once_cell = "1.6.0"
canvas = { path = "canvas" }
config = { path = "config" }
model = { path = "model" }

[workspace]
members = ["canvas", "config", "model"]