[package]
name = "model"
version = "0.1.0-alpha"
authors = ["rosensymmetri <o.berndal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canvas = { path = "../canvas" }
config = { path = "../config" }
once_cell = "~1.6.0"
thiserror = "1.0"
toml = "0.5"